# docQA

./: .gitignore  README.md  pyproject.toml
docqa/: iollama.py  process_qs.py  qdrant_base.py  text_extractor.py  web_app.py
docqa/answers/: readme.md
docqa/doc_extraction/: docx_file.py  pdf_file.py
docqa/doc_extraction/documents/: readme.md
docqa/imodels/: iollama.py
